project(
  'RePak',
  'cpp',
  version : '0.1',
  meson_version : '>= 1.3.0',
  # default_options : ['warning_level=3', 'cpp_std=c++20'],
  default_options : ['warning_level=0', 'cpp_std=c++20'],
)

cpp = meson.get_compiler('cpp')

lib_d3d11 = cpp.find_library('dxvk_d3d11')

dependencies = [
  dependency('RapidJSON'),  
  dependency('rapidcsv'),  
  dependency('libzstd'),
  # dependency('dxvk-d3d11'),
  lib_d3d11
]

sources = [
  'src/application/console.cpp',
  'src/application/repak.cpp',
  'src/assets/anim_recording.cpp',
  'src/assets/animrig.cpp',
  'src/assets/animseq.cpp',
  'src/assets/assets.h',
  'src/assets/datatable.cpp',
  'src/assets/lcd_screen_effect.cpp',
  'src/assets/material.cpp',
  'src/assets/material_for_aspect.cpp',
  'src/assets/model.cpp',
  'src/assets/patch.cpp',
  'src/assets/settings.cpp',
  'src/assets/settings_layout.cpp',
  'src/assets/shader.cpp',
  'src/assets/shaderset.cpp',
  'src/assets/texture.cpp',
  'src/assets/texture_anim.cpp',
  'src/assets/texture_list.cpp',
  'src/assets/ui.cpp',
  'src/assets/ui_image_atlas.cpp',
  'src/common/const.h',
  'src/common/decls.h',
  'src/logic/buildsettings.cpp',
  'src/logic/buildsettings.h',
  'src/logic/pakfile.cpp',
  'src/logic/pakfile.h',
  'src/logic/pakpage.cpp',
  'src/logic/pakpage.h',
  'src/logic/rmem.h',
  'src/logic/rtech.cpp',
  'src/logic/rtech.h',
  'src/logic/streamcache.cpp',
  'src/logic/streamcache.h',
  'src/logic/streamfile.cpp',
  'src/logic/streamfile.h',
  'src/math/color.h',
  'src/math/common.h',
  'src/math/vector.h',
  'src/public/anim_recording.h',
  'src/public/animrig.h',
  'src/public/datatable.h',
  'src/public/lcd_screen_effect.h',
  'src/public/material.h',
  'src/public/material_for_aspect.h',
  'src/public/materialflags.h',
  'src/public/multishader.h',
  'src/public/rpak.h',
  'src/public/rui_package.h',
  'src/public/settings.h',
  'src/public/settings_layout.h',
  'src/public/shader.h',
  'src/public/shaderset.h',
  'src/public/starpak.h',
  'src/public/studio.h',
  'src/public/texture.h',
  'src/public/texture_anim.h',
  'src/public/texture_list.h',
  'src/public/ui.h',
  'src/utils/binaryio.cpp',
  'src/utils/binaryio.h',
  'src/utils/dxutils.cpp',
  'src/utils/dxutils.h',
  'src/utils/jsonutils.cpp',
  'src/utils/jsonutils.h',
  'src/utils/logger.cpp',
  'src/utils/logger.h',
  'src/utils/MurmurHash3.cpp',
  'src/utils/MurmurHash3.h',
  'src/utils/strutils.cpp',
  'src/utils/strutils.h',
  'src/utils/utils.cpp',
  'src/utils/utils.h',
  'src/utils/zstdutils.cpp',
  'src/utils/zstdutils.h',
]

exe = executable(
  'RePak',
  sources,
  install : true,
  dependencies : dependencies,
  include_directories : include_directories('src'),
  cpp_pch : 'src/pch.h'
)
